# mega-get-reqwest-rs

./: Cargo.toml  readme.md
src/: main.rs
