[package]
name = "mega-get-reqwest-rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap  = { version = "4.0.29", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
reqwest = {version = "0.11.13", features = ["socks"]}
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
